          user might now proceed, having completed the Tutorial.
          (Del Merrit)
        - Fix typo in Authorization section (RT #42091)
        - Fix typo in BasicCRUD (RT #42034)
        - Resolve outstanding typo and suggestions in MoreCatalystBasics (RT #41491)
        - Misc minor updates
        - Fix DBIC create for MySQL in Appendix (Jarom)

5.7016  28 Dec 2008
        - Updates to make Parts 8 & 9 run correctly
        - Adjust URLs for final config tarballs
        - Add note about changes across different C::Devel on how plugins enabled
        - Misc minor updates

5.7015  15 Dec 2008
        - Remove TTSite from Tutorial (thanks to dhoss for the help)
        - Update Tutorial for Ubuntu 8.10 (therefore update to 
          Cat v5.7014, C::Devel v1.07, DBIC v0.08010, etc.)
        - Reorganize MoreCatalystBasics.pod so user is able to run 
          the app the first time much earlier and build on it from 
          there (running the app each time along the way)
        - Update URL for latest copy in SVN to match new location of repo
        - Misc typo fix
        - Change use of Class::C3 to MRO::Compat, as rafl tells me
          this is best practice, and gives you native next::method in 
          5.10. (t0m)

5.7014   04 Nov 2008
        - Remove a reference to a FOREACH loop that did not exist (RT #39046)
        - Changed some Template Toolkit links to perldoc links (RT #38354)
        - Fix Template Toolkit website link (RT #37574)
        - Fix part numbering (RT #37963)
        - Improvements to the ACCEPT_CONTEXT docs in Manual::Intro
        - Happy Election Day, America!

5.7013   09 Jul 2008
        - revert to use Catalyst qw/@plugins/ style

5.7012   29 May 2008
        - Expurgation of all use of default :Private and index :Private in favour
          of default :Path and index :Path :Args(0)
        - Expurgation of all yaml as configuration format
        - Major updates to tutorial, thanks hkclark and gerda 
