@@ -15,6 +15,7 @@ Revision history for Catalyst-Manual
         - Resolve outstanding typo and suggestions in MoreCatalystBasics (RT #41491)
         - Misc minor updates
         - Fix DBIC create for MySQL in Appendix (Jarom)
+        - Add some "getting started" links to the Catalyst::Manual page
 
 5.7016  28 Dec 2008
         - Updates to make Parts 8 & 9 run correctly
